--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <div class="cmsFooter" ng-view></div>
 
   <!-- AngularJS / JavaScript -->
-  <!-- <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/ng-table/ng-table.js"></script> -->
+  <script src="js/angular.js"></script>
+  <!-- <script src="js/angular-route.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/ng-table.js"></script> -->
   <script src="js/app.js"></script>
 
 </body>
