added dependancies folder with angular.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="cmsFooter" ng-view></div>
 
   <!-- AngularJS / JavaScript -->
-  <script src="js/angular.js"></script>
+  <script src="dependancies/angular/angular.js"></script>
   <!-- <script src="js/angular-route.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/ng-table.js"></script> -->
