--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js" ng-controller="cmsTestController">
+<html lang="en" class="no-js" ng-app="cmsTestApp">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{page.title || White Stratus - CMS Test Project}}</title>
+  <title>{{page.title || 'White Stratus - CMS Test Project'}}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
