--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div class="cmsFooter" ng-view></div>
 
   <!-- AngularJS / JavaScript -->
+  <script src="dependancies/jquery/dist/jquery.js"></script>
   <script src="dependancies/angular/angular.js"></script>
   <!-- <script src="js/angular-route.js"></script>
   <script src="js/bootstrap.min.js"></script>
