added calendar to app.js and index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Page Body -->
   <div class="cmsBody" ng-view></div>
-
+	<feed-calendar-viewer></feed-calendar-viewer>
   <!-- Page Footer -->
   <div class="cmsFooter" ng-view></div>
 
@@ -38,6 +38,9 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/ng-table.js"></script> -->
   <script src="js/app.js"></script>
+  
+  
+  <script src="directives/ws-cms-exd-calendar.js"></script>
 
 </body>
 </html>
