--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{page.title || 'White Stratus - CMS Test Project'}}</title>
+  <!-- <title>{{page.title || 'White Stratus - CMS Test Project'}}</title> -->
+  <title ng-bind="'CMS Test &mdash; ' + title">TEST</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -20,7 +21,7 @@
 <body>
 
   <!-- Page Header -->
-  <div class="cmsHeader" ng-view></div>
+  <div class="cmsHeader"></div>
 
   <!-- Page Menu -->
   <div class="cmsMenu"></div>
@@ -29,13 +30,13 @@
   <div class="cmsBody" ng-view></div>
 	<feed-calendar-viewer></feed-calendar-viewer>
   <!-- Page Footer -->
-  <div class="cmsFooter" ng-view></div>
+  <div class="cmsFooter"></div>
 
   <!-- AngularJS / JavaScript -->
   <script src="dependancies/jquery/dist/jquery.js"></script>
   <script src="dependancies/angular/angular.js"></script>
-  <!-- <script src="js/angular-route.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="dependancies/angular/angular-route.js"></script>
+  <!-- <script src="js/bootstrap.min.js"></script>
   <script src="js/ng-table.js"></script> -->
   <script src="js/app.js"></script>
   
