--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <!-- Page Body -->
   <div class="cmsBody" ng-view></div>
 	<feed-calendar-viewer></feed-calendar-viewer>
+	<ws-feed-viewer></ws-feed-viewer>
+	<ws-simple-menu></ws-simple-menu>
+	<ws-feed-group-viewer></ws-feed-group-viewer>
   <!-- Page Footer -->
   <div class="cmsFooter"></div>
 
@@ -42,6 +45,10 @@
   
   
   <script src="directives/ws-cms-exd-calendar.js"></script>
+  <script src="directives/ws-cms-exd-feed.js"></script>
+  <script src="directives/ws-cms-exd-group.js"></script>
+  <script src="directives/ws-cms-exd-menu.js"></script>
+  
 
 </body>
 </html>
