Site-level implementation

--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
 </head>
 <body class="cmsBody">
 
-  <!-- Page Header -->
-  <div class="cmsHeader"><center><h1>This is the Header!</h1></center></div>
+  <div ng-view></div>
 
-  <!-- Page Menu -->
+  <!-- Page Header -->
+  <!-- <div class="cmsHeader"><center><h1>This is the Header!</h1></center></div>
+
+  <!-- Page Menu ->
   <div class="cmsMenu"><center><h3>This is the Menu!</h3></center></div>
 
-  <!-- Page Content -->
+  <!-- Page Content ->
   <div class="cmsContent" ng-view></div>
 
-  <!-- Page Footer -->
-  <div class="cmsFooter"><center><h5>This is the Footer!</h5></center></div>
+  <!-- Page Footer ->
+  <div class="cmsFooter"><center><h5>This is the Footer!</h5></center></div> -->
 
   <!-- AngularJS / JavaScript -->
   <script src="dependencies/jquery/dist/jquery.js"></script>
